--- a/lab11/11.md
+++ b/lab11/11.md
@@ -4,113 +4,143 @@ Alright! Let's begin by designing **Lab 11** using the provided Superstore data.
 
 ---
 
-### ✅ **Report 1: Map Report**
+### ✅ **Report 1: Basic Map Report**
 
 1. Drag Longitude to the Columns shelf.
 2. Drag Latitude to the Rows shelf.
-3. Drop Profit to Color and State to Detail.
-
-Create a parameter as below
-
-### ✅ **Report 2:Individual Item Profit and Sales report**
-
-1. Drag SUM(Sales) to the Columns shelf.
-2. Drag SUM(Profit) to the Rows shelf.
-3. In the "Tables" pane on the left, Category is dropped into the "Filters" section.
-4. In the "Tables" pane on the left, Department is dropped into the "Filters" section.
-5. Under the "Marks" card, the mark type is set to Circle.
-6. Under the "Marks" card, Item is dropped into the "Detail" mark. 
-Create calculcated feild `Show Sheet Filter` -> 
-**Formula**
-
-`[Show Sheet]`
-
-7. In the top left, under "Show/Hide Filters and Legends", "Show Sheet Filter: Map" is visible, suggesting a sheet named "Map".
-8. On the right-hand side, a quick filter for Department is shown, with "All" selected, and individual departments like "Furniture", "Office Supplies", and "Technology" checked.
-9. Below the Department filter, a quick filter for Category is shown, Chosee Appliances and Binders and Binder Accessories
-10. At the bottom right, there is a "Show Sheet" option, and "Map" is selected in the dropdown, indicating that the current view is not the "Map" sheet, but the option to switch to it is present.
+3. Drop City Detail.
 
 
+
+### ✅ **Report 2:Dark Map**
+
+Duplicate the above report and change the background to black use the formatting.
 
 
 ---
 
-### ✅ **Report 3: Profit by State (2) Report**
+### ✅ **Report 3: Houses for Sale Report**
+
+**from Real Estate**
 
 1. Drag Longitude to the Columns shelf.
 2. Drag Latitude to the Rows shelf.
-3. Drop Profit to Color and State to Detail.
-3. In the "Tables" pane on the left, Category is dropped into the "Filters" section.Chosee Appliances and Binders and Binder Accessories
-4. In the "Tables" pane on the left, Department is dropped into the "Filters" section. Choose all
 
+Set them to Average
+
+3. Drop Price in Size and ID in detail.
 ---
 
-### ✅ **Report 4: Bar Chart**
+### ✅ **Report 4: Hospital and Patients Chart**
 
 
-1. Drag **Department**  and `Category` to the Columns shelf.
-2. Drop **Profit** in Rows follow the below configuration
+1. Drag Longitude to the Columns shelf.
+2. Drag Latitude to the Rows shelf.
 
-Drop Show sheet filter. 
+Set them to Average
+
+3. Drop Location Type in Color , Ssize and shape
+4. Drop ID in Detail
+
+Click on the shape card and change the shapes for Hospital and Patient Residence as per your choice
 
 ----
 
-### ✅ ** Additional Report Show/Hide Legend **
+### ✅ **Report 5: Lines **
+
+1. Drag Longitude to the Columns shelf.
+2. Drag Latitude to the Rows shelf.
+3.Drop Line and Id in Detail.
+
+For Line , set the measure to collect.
+
+4. Create a calculated field 
+
+**Distance to the Hospital**
+
+`
+DISTANCE(
+    MAKEPOINT([Hospital Latitude], [Hospital Longitude]),
+    MAKEPOINT([Latitude], [Longitude]),
+    'mi'
+)
+`
 
 
-1. 
-
-Add new calculation for both rows and columns **MIN(1)**
-
-
-Start creating dashboards to explore 
-
+Drop this field in Tooltip
 
 
 
 -----
 
-# Show/Hide Filters and Legends (Recommended: Dynamic Zone Visibility)
+### ✅ **Report 6: Buffer **
 
+1. Drag Longitude to the Columns shelf.
+2. Drag Latitude to the Rows shelf. Twice
 
-**Dashboard Setup:**
-1. Drag filters/legends to your dashboard. Place them in a layout container (Horizontal/Vertical) if grouping.
-2. Select the filter/legend (or its container).
-3. Go to the Layout tab.
-4. Check "Control visibility using zones" and select your [Show Filters Trigger] calculated field.
-**Interaction:**
-1. Show the "Show Filters?" parameter on the dashboard (right-click parameter > "Show Parameter").
-2. Change the parameter value to toggle visibility.
+Click on the arrow of Latitude and set to dual axis
+
+3. In one of the latitude. drop ID latitude , longitude and location type in detail. Set the marks card to circle
+4. In other latitude drop Hospital radius to Detail. Set the measure to collect.
+
+For that create a calculated field using the below formula
+
+**Formula**
+
+`IF [Location Type] == "Hospital"
+THEN BUFFER(MAKEPOINT([Latitude], [Longitude]), 3, 'mi')
+END`
 
 --------
 
-# Show/Hide Instructions (Recommended: Dynamic Zone Visibility)
+# Average House Prices
 
-**Dashboard Setup:**
-1. Drag a Text Object to your dashboard. Type your instructions into it.
-2. Place this Text Object (and any other related elements) inside a layout container (Horizontal or Vertical) for better management, though a single text object can be controlled directly.
-3. Select the Text Object (or its container).
-4. Go to the Layout tab on the left-hand pane.
-5. Check "Control visibility using zones" and select your [Show Instructions Trigger] calculated field from the dropdown.
-**Interaction:**
-1. Show the "Show Instructions?" parameter on the dashboard (right-click parameter > "Show Parameter").
-2. Change the parameter value to toggle the visibility of the instructions.
+1. Drag Longitude to the Columns shelf.
+2. Drag Latitude to the Rows shelf. 
+3. Create a group for Zip and configure as below
+
+78702, 78717, 78721 and 16 more
+78732, 78734, 78735 and 4 more
+Other
+
+4. Drop Zip code group field in Color
+5. Drop Price in label
+
 
 -----------------
-# Simple Example of Collapsing
-**Create the Dashboard:**
-1. Click the "New Dashboard" icon (or Dashboard > New Dashboard).
-Set Size to "Custom (800 x 500)".
-2. Drag the "Profit by Department and Category" sheet from the "Sheets" pane onto the dashboard canvas.
-**Add Department Filter:**
-1. Select the "Profit by Department and Category" sheet on the dashboard.
-2. Click the small dropdown arrow in the top-right corner of the sheet.
-3. Go to Filters and select Department. (This will add the quick filter to the dashboard).
-(Optional: You can move and resize the filter on the dashboard).
+### Average House Prices by Region
+
+
+1. Drag Longitude to the Columns shelf.
+2. Drag Latitude to the Rows shelf. 
+3. Drop Region in Color
+4. Drop Price in Label and change its measure to average
+
+
 --------
-# Sheet Swap
-**A New Dashboard was created.**
-1. Its Size was set to "Custom (800 x 300)".
-2. A Layout Container (likely a Vertical or Horizontal one, though not explicitly shown if it's the sole object) was added to the dashboard.
-3. Both the "Map" sheet and the "Show / Hide Filters and Legends" sheet were dragged into this same layout container.
-4. The Show Sheet Parameter Control was added to the dashboard (right-click the Show Sheet parameter in the Data pane > "Show Parameter"). It's placed at the top right of the dashboard.
+
+### Dual Axis Map
+
+
+1. Drag Longitude to the Columns shelf.
+2. Drag Latitude to the Rows shelf.  (Twice)
+3. In one of the latitude. Drop Profit in Color and State in Detail
+4. In other latitude drop Sales in Size and Postal code in detail. Set Marks card to circle.
+
+----------
+
+### Washed Out Map
+
+1. Drag Longitude to the Columns shelf.
+2. Drag Latitude to the Rows shelf. 
+3. Drop Profit in Color and State in Detail
+
+
+-------------
+### Number of Patients per Room.
+1. Drag X to the Columns shelf.
+2. Drag Floor and Y to the Rows shelf. 
+3. Drop Number of Patients in Size. Change the marks card to circle.
+
+----------
+
