--- a/lab11/11.md
+++ b/lab11/11.md
@@ -93,7 +93,7 @@ END`
 
 --------
 
-# Average House Prices
+### Report 7 : Average House Prices
 
 1. Drag Longitude to the Columns shelf.
 2. Drag Latitude to the Rows shelf. 
@@ -108,7 +108,7 @@ Other
 
 
 -----------------
-### Average House Prices by Region
+### Report 8:  Average House Prices by Region
 
 
 1. Drag Longitude to the Columns shelf.
@@ -119,7 +119,7 @@ Other
 
 --------
 
-### Dual Axis Map
+### Report 9:  Dual Axis Map
 
 
 1. Drag Longitude to the Columns shelf.
@@ -129,7 +129,7 @@ Other
 
 ----------
 
-### Washed Out Map
+### Report 10: Washed Out Map
 
 1. Drag Longitude to the Columns shelf.
 2. Drag Latitude to the Rows shelf. 
@@ -137,7 +137,7 @@ Other
 
 
 -------------
-### Number of Patients per Room.
+### Report 11: Number of Patients per Room.
 1. Drag X to the Columns shelf.
 2. Drag Floor and Y to the Rows shelf. 
 3. Drop Number of Patients in Size. Change the marks card to circle.
