--- a/lab14/14.md
+++ b/lab14/14.md
@@ -13,135 +13,88 @@ Alright! Let's begin by designing **Lab 1** using the provided Superstore data.
 Set the marks card to Line
 
 
-### ✅ **Report 2:Dark Map**
+### ✅ **Report 2:Using Tall Data **
 
-Duplicate the above report and change the background to black use the formatting.
+**Use Tall(country) data.**
+
+1. Drag Year to the Columns 
+2. Drag Population to Rows shelf.
+3. Drop Country Name in Color. Choose any country
 
 
 ---
 
-### ✅ **Report 3: Houses for Sale Report**
+### ✅ **Report 3: Country by population Report**
 
-**from Real Estate**
+1. Drag Year to the Columns 
+2. Drag Population to Rows shelf.
 
-1. Drag Longitude to the Columns shelf.
-2. Drag Latitude to the Rows shelf.
+Add formatting as per your need
 
-Set them to Average
-
-3. Drop Price in Size and ID in detail.
 ---
 
-### ✅ **Report 4: Hospital and Patients Chart**
+### ✅ **Report 4: Namy by Bank account balance Chart**
 
 
-1. Drag Longitude to the Columns shelf.
-2. Drag Latitude to the Rows shelf.
+1. Drag Bank Account balance to the Columns shelf.
+2. Drag Name to the Rows shelf.
+3. Drop Table Name in color.
 
-Set them to Average
-
-3. Drop Location Type in Color , Ssize and shape
-4. Drop ID in Detail
-
-Click on the shape card and change the shapes for Hospital and Patient Residence as per your choice
+Sort it by descending order
 
 ----
 
-### ✅ **Report 5: Lines **
+### ✅ **Report 5: Patients in Hospital **
 
-1. Drag Longitude to the Columns shelf.
-2. Drag Latitude to the Rows shelf.
-3.Drop Line and Id in Detail.
+1. Drag Date to the Columns shelf.Se it to Day
+2. Drag Patients in Hospital to the Rows shelf.
+3.Set the marks card to Area.
 
-For Line , set the measure to collect.
-
-4. Create a calculated field 
-
-**Distance to the Hospital**
-
-`
-DISTANCE(
-    MAKEPOINT([Hospital Latitude], [Hospital Longitude]),
-    MAKEPOINT([Latitude], [Longitude]),
-    'mi'
-)
-`
-
-
-Drop this field in Tooltip
+4. Add a reference line for entire table as below.
 
 
 
 -----
 
-### ✅ **Report 6: Buffer **
+### ✅ **Report 6: Measures Per Apartment **
 
-1. Drag Longitude to the Columns shelf.
-2. Drag Latitude to the Rows shelf. Twice
+1. Drag Measure Names to the Columns shelf.Sort it by descending order
+2. Drag Apartment to the Rows shelf. 
 
-Click on the arrow of Latitude and set to dual axis
+3. Drop Measure values to Text.
+4. Drop Measure Names to filters
 
-3. In one of the latitude. drop ID latitude , longitude and location type in detail. Set the marks card to circle
-4. In other latitude drop Hospital radius to Detail. Set the measure to collect.
 
-For that create a calculated field using the below formula
-
-**Formula**
-
-`IF [Location Type] == "Hospital"
-THEN BUFFER(MAKEPOINT([Latitude], [Longitude]), 3, 'mi')
-END`
 
 --------
 
-### Report 7 : Average House Prices
+### Report 7 : Rent per Square Foot
 
-1. Drag Longitude to the Columns shelf.
-2. Drag Latitude to the Rows shelf. 
-3. Create a group for Zip and configure as below
+Duplicate the above report
 
-78702, 78717, 78721 and 16 more
-78732, 78734, 78735 and 4 more
-Other
+1. Create the below calcualted fields
 
-4. Drop Zip code group field in Color
-5. Drop Price in label
+- Rent per Square Foot (wrong - AVG) - `SUM([Rent Collected]) / AVG([Square Feet])`
+- Rent per Square Foot (wrong - MIN) - `SUM([Rent Collected]) / MIN([Square Feet])`
+- Rent per Square Foot (wrong - SUM) - `SUM([Rent Collected]) / SUM([Square Feet])`
+- Rent per Square Foot (wrong- MAX) - `SUM([Rent Collected]) / MAX([Square Feet])`
+
+2. Sort the Measure Names to descending order
 
 
 -----------------
-### Report 8:  Average House Prices by Region
+### Report 8: Solving Rent per Square Foot with LOD
 
 
-1. Drag Longitude to the Columns shelf.
-2. Drag Latitude to the Rows shelf. 
-3. Drop Region in Color
-4. Drop Price in Label and change its measure to average
+1. Drag Measure Names to the Columns shelf.Sort it by descending order
+2. Drag Apartment to the Rows shelf. 
+3. Drop Measure values to Text.
+4. Drop Measure Names to filters.
 
+- Choose Rent collected
+- Square feet per apartment
+- Rent Collected per Square Foot set to agrregate([Rent Collected per Square Foot])
 
 --------
 
-### Report 9:  Dual Axis Map
-
-
-1. Drag Longitude to the Columns shelf.
-2. Drag Latitude to the Rows shelf.  (Twice)
-3. In one of the latitude. Drop Profit in Color and State in Detail
-4. In other latitude drop Sales in Size and Postal code in detail. Set Marks card to circle.
-
-----------
-
-### Report 10: Washed Out Map
-
-1. Drag Longitude to the Columns shelf.
-2. Drag Latitude to the Rows shelf. 
-3. Drop Profit in Color and State in Detail
-
-
--------------
-### Report 11: Number of Patients per Room.
-1. Drag X to the Columns shelf.
-2. Drag Floor and Y to the Rows shelf. 
-3. Drop Number of Patients in Size. Change the marks card to circle.
-
-----------
 
