--- a/Lab1/1.md
+++ b/Lab1/1.md
@@ -6,7 +6,7 @@ Alright! Let's begin by designing **Lab 1: Creating Your First Interactive Repor
 
 ### Objective:
 In this lab, you will:
-- Connect Tableau to the Superstore dataset
+- Connect Tableau to the Superstore dataset!
 - Create an interactive report showing Sales by Category and Region
 - Add basic interactivity (filter, tooltip, and formatting)
 
@@ -18,7 +18,7 @@ In this lab, you will:
 2. From the home screen, click **"Microsoft Excel"** if you saved the dataset as an Excel file or **"Text File"** if it's a CSV.
 3. Locate your dataset file (Superstore_Lab1.csv or Excel).
 ![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/Lab1/1.png?raw=true)
-4. Click **Open**.
+4. Click **Open**. 
 
 ---
 
@@ -32,10 +32,12 @@ In this lab, you will:
 
 ---
 
-### ✅ **Report 1: Create a Sales by Department Report**
+### ✅ **Report 1: Create a Sales by Department **
 
-1. Drag **Sales** to the Columns shelf.
-2. Drag **Department** to the Rows shelf.
+1. Drag `Sales` to the **Columns** shelf.
+2. Drag `Department`  to the **Rows** shelf.
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_1/1.png?raw=true)
 
 Double tap in sheet 1 and rename it as **Sales by Department**
 
@@ -50,6 +52,8 @@ Double tap in sheet 1 and rename it as **Sales by Department**
 2. Drag `Sales` to **Columns**.
 3. Drag `Region` and `Department` to **Rows**.
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_1/2.png?raw=true)
+
 ---
 
 ### ✅ **Report 3: Sales of Department by Region ( Bar Chart - Stacked)**
@@ -61,6 +65,7 @@ Double tap in sheet 1 and rename it as **Sales by Department**
 3. Drag `Sales` to **Columns`.
 4. Drag `Region` to color in the Marks card.
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_1/3.png?raw=true)
 
 Double tap on sheet 3 and rename it as **Sales of Department by Region ( Bar Chart - Stacked)**
 
@@ -70,10 +75,12 @@ Double tap on sheet 3 and rename it as **Sales of Department by Region ( Bar Cha
 **Steps**:
 1. Create a new worksheet called **Sales over Time( Quarter )**.
 2. Drag `Sales` to **Rows**.
-3. Drag `Order Date` to **Columns`.
+3. Drag `Order Date` to **Columns**.
 4. Click on the arrow of the column(Order date) and choose quarter from the dropdown.
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_1/Screenshot%202025-06-09%20153216.png?raw=true)
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_1/6.png?raw=true)
 Rename the sheet as Sales over Time( Quarter )
 
 ### ✅ **Report 5: Sales over Time by Region**
@@ -82,20 +89,22 @@ Rename the sheet as Sales over Time( Quarter )
 **Steps**:
 1. Create a new worksheet called **Sales over Time by Region**.
 2. Drag `Sales` to **Rows**.
-3. Drag `Order Date` to **Columns`.
+3. Drag `Order Date` to  **Columns**
 4. Click on the arrow of the column(Order date) and choose quarter from the dropdown.
 5. Drag Region on the color option on the Marks Card
 
-
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_1/7.png?raw=true)
 
 ### ✅ **Report 6: Sales over Time by Category **
 
 
 **Steps**:
-1. Create a new worksheet called **Sales over Time by Category
+1. Create a new worksheet called **Sales over Time by Category**
 2. Drag `Sales` and `Category` to **Rows**.
-3. Drag `Order Date` to **Columns`.
-4. Click on the arrow of the column(Order date) and choose quarter from the dropdown.
+3. Drag `Order Date` to **Columns**.
+4. Click on the arrow of the column (Order date) and choose quarter from the dropdown.
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_1/8.png?raw=true)
 
 ### ✅ **Report 7: Sales by State **
 
@@ -103,9 +112,11 @@ Rename the sheet as Sales over Time( Quarter )
 **Steps**:
 1. Create a new worksheet called **Sales by State**
 2. Drag `Latitude` to **Rows**.
-3. Drag `Longitude` to **Columns`.
-4. Drag and drop sales in color option on the Marks card
-5. Drag and drop state in the detail option on the Marks card
+3. Drag `Longitude` to **Columns**.
+4. Drag and drop `Sales` in **color** option on the **Marks** card
+5. Drag and drop `State` in the **detail** option on the **Marks** card
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_1/9.png?raw=true)
 
 ### ✅ **Report 8: Sales by Postal Code **
 
@@ -113,10 +124,12 @@ Rename the sheet as Sales over Time( Quarter )
 **Steps**:
 1. Create a new worksheet called **Sales by Postal Code**
 2. Drag `Latitude` to **Rows**.
-3. Drag `Longitude` to **Columns`.
-4. Drag and drop sales in Size option on the Marks card
-5. Drag and drop postal Code in the detail option on the Marks card
-6. Drag and drop Profit in the Color option on the Marks Card
+3. Drag `Longitude` to **Columns**.
+4. Drag and drop `Sales` in Size option on the **Marks** card
+5. Drag and drop `Postal Code` in the detail option on the **Marks** card
+6. Drag and drop `Profit` in the Color option on the **Marks** Card
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_1/10.png?raw=true)
 
 ### ✅ **Report 9: Density of Orders**
 
@@ -124,33 +137,26 @@ Rename the sheet as Sales over Time( Quarter )
 **Steps**:
 1. Create a new worksheet called **Density of Orders**
 2. Drag `Latitude` to **Rows**.
-3. Drag `Longitude` to **Columns`.
-4. Drag and drop Postal Code in the detail option on the Marks card
+3. Drag `Longitude` to **Columns**.
+4. Drag and drop `Postal Code` in the detail option on the **Marks** card
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_1/11.png?raw=true)
 
 ### ✅ **Dashboard: Superstore Sales**
 
 
 **Steps**:
-1. Click on the dashboard option located on the Title bar.
-2. Select new dashboard ( you will land on a empty dashboard)
+1. Click on the **dashboard** option located on the **Title** bar.
+2. Select **new dashboard (** you will land on a empty dashboard)
 3. From the existing sheets list on the left pane, Drag and drop the following sheets
 - Sales by Department
 - Sales over Time(Quarter)
 - Sales by Postal Code
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_1/12.png?raw=true)
 
 
-### ✅ **Step 7: Save Your Workbook**
 
-1. Click **File** > **Save As**.
-2. Name it: `Lab1.twbx`.
-3. Save it in your project folder.
-
----
-
-### ✅ **Step 8: Deliverable**
-
-Export your interactive report as a PDF and also submit the `.twbx` Tableau workbook file.
 ---
 
 Next , we shall continue with our lab2 using the same dataset.
