--- a/Lab2/2.md
+++ b/Lab2/2.md
@@ -1,37 +1,13 @@
-Alright! Let's begin by designing **Lab 2: ** using the provided Superstore data.
 
----
 
-## 📘 **Lab 2: **
+## 📘 **Lab 2: Connecting to Data in Tableau (Superstore) **
 
 ### Objective:
+
 In this lab, you will:
-- Connect Tableau to the Superstore dataset (Excel sheet)
-- Create an interactive report showing Profit by Category and Region
-- Add basic interactivity with the formatting.
 
----
-
-### ✅ **Step 1: Open Tableau and Connect to Data**
-
-1. Open **Tableau Desktop**.
-2. From the home screen, click **"Microsoft Excel"** if you saved the dataset as an Excel file or **"Text File"** if it's a CSV.
-3. Locate your dataset file (Superstore_Lab1.csv or Exceli.e xlsx).
-In our case load the xlsx file
-4. Click **Open**.
-
----
-
-### ✅ **Step 2: Load the Data into Tableau**
-
-1. Tableau will automatically load the data into the **Data Source** tab.
-2. Now, drag and drop Orders and Returns table to the right (as shown)
-
-Notice: We have formed a connnection between the tables. This is crucial for the data flow.
-
-3. Click **Sheet 1** at the bottom to start creating your report.
-
-
+- Connect Tableau to the Superstore dataset (Excel sheet).
+- Create various interactive visualizations to analyze Profit, Returns, Order Quantity, and Sales across different dimensions like States, Regions, Reasons, and Customer Segments.
 
 ---
 
@@ -39,9 +15,10 @@ Notice: We have formed a connnection between the tables. This is crucial for the
 
 1. Drag **Longitude** to the Columns shelf.
 2. Drag **Latitude** to the Rows shelf.
-3. Drop Profit to label and Color options from the Marks card
-4. Drop the State in Detail option on the Marks card.
+3. Drop `Profit` to **label** and **Color** options from the **Marks** card
+4. Drop the `State` in **Detail** option on the **Marks** card.
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_2/1.png?raw=true)
 
 Double tap in sheet 1 and rename it as **Profit by States**
 
@@ -55,7 +32,9 @@ Double tap in sheet 1 and rename it as **Profit by States**
 1. Go to a new worksheet and name it **Returns by Reasons**.
 2. Drag `Returns(Count)` to **Columns**.
 3. Drag `Return Reason` to **Rows**.
-4. Drop Return Reason to Colors.
+4. Drop `Return Reason` to **Colors**.
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_2/2.png?raw=true)
 
 ---
 
@@ -65,8 +44,11 @@ Double tap in sheet 1 and rename it as **Profit by States**
 **Steps**:
 1. Create a new worksheet called ** Returns by Region**.
 2. Drag `Region` to **Rows**.
-3. Drag `Returns(Count)` to Color and Label in the Marks card.
+3. Drag `Returns(Count)` to **Color** and **Label** in the Marks card.
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_2/3.png?raw=true)
+
+-------------
 
 
 ### ✅ **Report 4: Profit by Customer Segment**
@@ -76,7 +58,12 @@ Double tap in sheet 1 and rename it as **Profit by States**
 1. Create a new worksheet called **Profit by Customer Segment**.
 2. Drag `Profit` to **Rows**.
 3. Drag `Customer Segment` to **Columns`.
-4. click on Show me on top right corner, choose Treemaps visual.
+4. Click on Show me on top right corner, choose **Treemaps** visual.
+
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_2/4.png?raw=true)
+
+----------------
 
 
 ### ✅ **Report 5: Order Quantity by Region**
@@ -85,10 +72,13 @@ Double tap in sheet 1 and rename it as **Profit by States**
 **Steps**:
 1. Create a new worksheet called **Order Quantity by Region**.
 2. Drag `Order Quantity` to **Rows**.
-3. Drag `Region` to **Columns`.
-4. Drag Region on the color option on the Marks Card
+3. Drag `Region` to **Columns**.
+4. Drag `Region` on the **color** option on the Marks Card
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_2/5.png?raw=true)
 
 
+-------------
 
 ### ✅ Report 6: Profit of States by Sales.
 
@@ -96,32 +86,13 @@ Double tap in sheet 1 and rename it as **Profit by States**
 **Steps**:
 1. Create a new worksheet called **Profit of States by Sales**
 2. Drag `Profit` to **Rows**.
-3. Drag `State` to **Columns`.
-4. Drag Profit on the color option and Sales to Detail option on the Marks Card.
+3. Drag `State` to **Columns**.
+4. Drag `Profit` on the **color** option and `Sales` to **Detail** option on the Marks Card.
 
 
-### ✅ **Dashboard: Superstore Profit**
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_2/6.png?raw=true)
 
 
-**Steps**:
-1. Click on the dashboard option located on the Title bar.
-2. Select new dashboard ( you will land on a empty dashboard)
-3. From the existing sheets list on the left pane, Drag and drop any of the reports of your choice.
-
-
-
-
-### ✅ **Step 7: Save Your Workbook**
-
-1. Click **File** > **Save As**.
-2. Name it: `Lab2.twbx`.
-3. Save it in your project folder.
-
----
-
-### ✅ **Step 8: Deliverable**
-
-Export your interactive report as a PDF and also submit the `.twbx` Tableau workbook file.
----
+-------------------
 
 
