--- a/Lab2/2.md
+++ b/Lab2/2.md
@@ -1,6 +1,6 @@
 
 
-## 📘 **Lab 2: Connecting to Data in Tableau (Superstore) **
+## 📘 Lab 2: Connecting to Data in Tableau (Superstore) 
 
 ### Objective:
 
