--- a/Lab3/3.md
+++ b/Lab3/3.md
@@ -1,22 +1,30 @@
-Perfect! Let's build out a **step-by-step Tableau report guide** based on your hospital visit dataset, following the same style as your example.
 
----
+#📘 Lab 2: Hospital Visit Data Analysis
 
-## ✅ Report 1: Number of Patient Visits by Department 
+#### Objective:
 
+In this lab, you will:
+
+- Connect Tableau to the hospital visit dataset.
+- Create diverse visualizations to analyze patient visits, revenue, patient risk profiles, and hospital stay durations across various departments, doctors, and time periods.
+- Master different chart types and data manipulation techniques in Tableau.
+
+## ✅ Report 1: Number of Patient Visits by Department .
 
 **Steps**:
 1. Drag `Department` to **Rows**.
 2. Drag `Number of Patient Visits` to **Columns**.
-3. Sort by descending Number of Patient Visits using the sort icon
+3. Sort by descending `Number of Patient Visits` using the **Sort** icon
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/1.png?raw=true)
+
+-------------------------
 ## ✅ Report 2: Revenue by Department 
-
 
 **Steps**:
 1. Create a new worksheet and name it **Revenue by Department**.
-2. Create a calculated field under Measure Names. Click on Measure Names, Then click on Analysis from the title bar and choose create calculated field.
-3. Then name the field as Goal Met?
+2. Create a calculated field under `Measure Names`. Click on `Measure Names`, Then click on Analysis from the title bar and choose create calculated field.
+3. Then name the field as **Goal Met**?
 And write the below formula , press ok.
 `SUM([Revenue]) >= SUM([Goal])`
 
@@ -30,48 +38,36 @@ And write the below formula , press ok.
 - You can right click on the **Revenue axis** and click on **Add Reference Line**.
 - Then follow the below configuration for all the settings(Line, Band, Distribution and Box Plot)
 
-10. Optional: 
+ **Optional: **
 - Sort by descending Revenue using the sort icon.
 - Edit the colors and some shadings as of your choice.
 
----
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/2.png?raw=true)
+
+-----------
 
 ## ✅ **Report 3: Year over Year Revenue (Bar-in-Bar)**
 
 **Steps**:
 1. Create a new worksheet called **Year over Year Revenue (Bar-in-Bar)**.
 2. Drag `Department Type` to **Rows**.
-3. Drag `Revenue` to **Columns`.
-4. Drag and drop `Date of Admit` in the **Color** and Size on the marks card. Set both of them to **Year** from the dropdown
-5. Click on the Standard View dropdown and choose Entire View. 
-
-You can experiment with colors and shading further. 
-
----
-
-## ✅ **Report 3: Revenue by Doctor (Horizontal Bar)**
-
-**Objective**: Identify which doctors generate the most revenue.
-
-**Steps**:
-1. Create a new worksheet called **Revenue by Doctor**.
-2. Drag `Doctor` to **Rows**.
 3. Drag `Revenue` to **Columns**.
-4. Drag `Revenue` to **Label`.
-5. Sort in descending order.
-6. Optional: Use color to highlight top performers (`Revenue` on Color).
+4. Drag and drop `Date of Admit` in the **Color** and Size on the marks card. Set both of them to **Year** from the dropdown
+5. Click on the Standard View dropdown and choose **Entire View**. 
 
---
+You can experiment with colors and shading further by exploring formatting options.
+
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/3.png?raw=true)
+
 
 ## ✅ **Report 4: ICU and Neonatal**
-
-
 
 **Steps**:
 1. Create a worksheet named **ICU and Neonatal**.
 2. Drag `Department` to **Rows**.
 3. Drag `Number of Patient Visits` to **Columns**.
-4. Create a group for Department. To do that 
+4. Create a **group** for **Department**. To do that 
 - Right-click on Department in the data pane → Create → Group
 
 - Select ICU and Neonatal, then click Group
@@ -80,9 +76,10 @@ You can experiment with colors and shading further.
 
 - Click OK
 
-5. Drag Department (group) to the Color shelf on the Marks card
-6. Drag Department (group) to the Filters Pane, just so you can filter between the items.
-7.  To only show value labels for ICU & Neonatal
+5 . Drag `Department (group)` to the Color shelf on the Marks card
+6.Drag `Department (group)` to the Filters Pane, just so you can filter between the items.
+7.To only show value labels for ICU & Neonatal
+
 Create a Calculated field.
 
 **Formula:**
@@ -93,16 +90,19 @@ Drag and drop this field on Label!
 
 Now you can see only the two Departments being highlighted along their values (i.e number of patient visits)
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/4.png?raw=true)
+
+
 ---
 
 ## ✅ **Report 5: Built-in Date Hierarchy **
-
-
 
 **Steps**:
 1. Create a worksheet called **Built-in Date Hierarchy**.
 2. Drag `Number of Patients` to **Rows**.
 3. Drag `Date of Admit` to **Columns**. Then click on the + icon beside Year on the column shelf. It will automatically shift to Quarter and show you the Years 2018 and 2019 along respective Quarters
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/5.png?raw=true)
 
 ---
 
@@ -118,6 +118,12 @@ Now you can see only the two Departments being highlighted along their values (i
 
 Simlarly do the same steps in a new worksheet name it **Date Values**. This time just choose **Month** and **descrete** option from the dropdown for `Date of Admits` column . 
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/6.png?raw=true)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/7.png?raw=true)
+
+--------------------------------
+
 ## ✅ Report 7:  Number of Patient Visits Over Time
 
 
@@ -127,7 +133,12 @@ Simlarly do the same steps in a new worksheet name it **Date Values**. This time
 3. Drag `Date of Admits` to **Columns`.
 Choose Month option from the column shelf.
 4. Drag `Date of Admits` onto **Color** and **Label** of the marks card. Choose **Year** option from the dropdown for both the items.
-5. Click on the **Label** from the **Marks** Card , click on **show mark labels**
+5. Click on the **Label** from the **Marks** Card , click on **show mark labels**.
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/8.png?raw=true)
+
+----------------
+
 
 ## ✅ Report 8:  Patient Admissions by Day (Heat Map)
 
@@ -141,9 +152,12 @@ Select Day from the dropdown
 4. Drag and drop the `Number of Patient Visits` onto Color on the Marks card
 4. Change the view as **Entire View** from the view dropdowm on the title bar.
 5. Click on the **Label** from the **Marks** Card , click on **show mark labels**
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/9.png?raw=true)
+
 ---
 
-## ✅ Report 8:  Patient Visits (Gantt Chart)
+## ✅ Report 9:  Patient Visits (Gantt Chart)
 
 
 **Steps**:
@@ -163,7 +177,9 @@ Select Day from the dropdown
 
 Make sure you keep `Date of Adimit` the as exact date. You can find this by clicking the dropdown of the column.
 
-## ✅ Report 9:  Patient Risk
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/10.png?raw=true)
+
+## ✅ Report 10:  Patient Risk
 
 **Steps**:
 1. Create a worksheet named **Patient Risk**.
@@ -176,7 +192,10 @@ Make sure you keep `Date of Adimit` the as exact date. You can find this by clic
 3. Drag `Patient Risk Profile` → Color (under Marks card)
 4. Sort the axis by desending and change the view to **Entire View**
 
-## ✅ Report 10:  Patient Risk (Percent per Department Type)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/11.png?raw=true)
+
+## ✅ Report 11:  Patient Risk (Percent per Department Type)
 
 **Steps**:
 1. Create a worksheet named **Patient Risk (Percent per Department Type)**.
@@ -193,29 +212,38 @@ Make sure you keep `Date of Adimit` the as exact date. You can find this by clic
 
 Note: You can adjust the decimal points by right clicking on the columns and removing the decimal points.
 
-## ✅ Report 11:  Patient Risk (side-by side views)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/12.png?raw=true)
+
+## ✅ Report 12:  Patient Risk (side-by side views)
 
 Follow the same steps as Report 10.
 
 Drag **Number of Patient Visits** again to columns and adjust the percentages/values by using the formatting option.
 
-## ✅ Report 12:  Days in the Hospital
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/13.png?raw=true)
+
+## ✅ Report 13:  Days in the Hospital
 
 Drag and drop. 
 - Department to Color
 - Days in Hospital to Size
 - Doctor and Patient Name to Detail
 
-## ✅ Report 13:  Days in the Hospital ( by branch)
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/14.png?raw=true)
+
+## ✅ Report 14:  Days in the Hospital ( by branch)
 
 1. Drag and drop. 
 - Department to Color
 - Days in Hospital to Size
 - Doctor and Patient Name to Detail
 
-2. Drop Hospital Branch to Rows
+2. Drop Hospital Branch to Rows.
 
-## ✅ Report 14:  Patient Visits over Time (area chart)
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/15.png?raw=true)
+
+## ✅ Report 15:  Patient Visits over Time (area chart)
 
 1. Drag and drop. 
  `Date of Admit` in **Column** (Change from Year to Month from the dropdown)
@@ -223,13 +251,24 @@ Drag and drop.
 2. Drop Hospital Branch to Color
 4. Select **Area chart** from **show me** visuals
 
-## ✅ Report 15:  Patient Visits over Time (area chart - percent of total)
+
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/16.png?raw=true)
+
+
+
+## ✅ Report 16:  Patient Visits over Time (area chart - percent of total)
 
 You can just duplicate the above report or follow the same steps.
 
 1. Add a table calculation for `Number of patient Visits`. Use the below configuration.
 
-## ✅ Report 16:  Revenue by Branch (Pie Chart)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/17.png?raw=true)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/17.2.png?raw=true)
+
+## ✅ Report 17:  Revenue by Branch (Pie Chart)
 
 1. Drag and drop. 
 - Hospital Branch to Color and Label
@@ -238,8 +277,10 @@ For one of the Revenue, add a table calculation for it. Use the below configurat
 2. Choose **Pie chart** from the visuals
 - Doctor and Patient Name to Detail
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/18.png?raw=true)
 
-## ✅ Report 17:  Average Length of Stay by Doctor
+
+## ✅ Report 18:  Average Length of Stay by Doctor
 
 1. Drag and drop. 
 - Days in Hospital to Columns ( Change the aggregate to Average)
@@ -249,33 +290,36 @@ For one of the Revenue, add a table calculation for it. Use the below configurat
 4. Drop **Doctor** to **Detail**
 5. Add a reference line and follow the below configuration. 
 
-## ✅ Report 18:  Average Length of Stay by Doctor (jittering)
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/19.png?raw=true)
+
+## ✅ Report 19:  Average Length of Stay by Doctor (jittering)
 
 Follow the same steps as above report.
 - Click on arrow beside Rows and select **New Calculation**. Name it **Index** and add a table calculation. Follow the below configuration.
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/20.png?raw=true)
 
-## ✅ Report 19:  Average Length of Stay by Doctor (Box Plot)
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/20.2.png?raw=true)
 
-The Same configuration as above.
-Remove the Index from the Rows.
-Select Box and Whiskers plot from the visual list. 
-It changes the rows and columns. Just bring back the original placement. (i.e - Days in Hospital to Columns and Department type to Rows)
+## ✅ Report 20:  Average Length of Stay by Doctor (Box Plot)
 
-## ✅ Report 20:  Minutes to Service (histogram)
+1. The Same configuration as above.
+2. Remove the Index from the Rows.
+3. Select Box and Whiskers plot from the visual list. 
+4. It changes the rows and columns. Just bring back the original placement. (i.e - Days in Hospital to Columns and Department type to Rows)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/21.png?raw=true)
+
+## ✅ Report 21:  Minutes to Service (histogram)
 
 1. Right click on Minutes to Service -> Create-> bins
 Adjust the bin size to 2
 2. Drop `Minutes to Service(bins)` to Columns
 3. Drop `Patient Risk Profile` and `Minutes to Service` on **Rows**
-4. Set `Minutes to Service` as countinuous 
+4. Set `Minutes to Service` as countinuous .
 
-## ✅ Report 21:  Revenue and Patient Visits by Department
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/22.png?raw=true)
 
-
-1. Drop `Revenue` to Columns
-2. Drop `Number of Patients` on **Rows**
-4. Set `Department` to Label
 
 ----------
 
@@ -286,6 +330,8 @@ Adjust the bin size to 2
 2. Drop `Number of Patients` on **Rows**
 4. Set `Department` to Label
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/23.png?raw=true)
+
 ---
 ## ✅ Report 23:  Number of Patient Visits (Combination Chart)
 
@@ -294,3 +340,7 @@ Adjust the bin size to 2
 2. Drop `Number of Patients` on **Rows** twice
 3. On the Marks Card, To one of the Sum(Number of Patients) change the type to Bar
 And on another Sum(Number of Patients)-> Drop `Hospital Branch` on `Color`
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_3/24.png?raw=true)
+
+-------------
