--- a/lab4/4.md
+++ b/lab4/4.md
@@ -1,5 +1,14 @@
-Alright! Let's begin by designing **Lab 4: ** using the provided Superstore data.
+# 📘 Lab 4: Rental Property Performance Analysis
 
+#### Objective:
+
+In this lab, you will:
+
+1. Connect Tableau to rental property data.
+2. Analyze rent per building and room, total rent per floor, and discount percentages at various levels.
+3. Create a rental calendar to track bookings and identify "free nights."
+4. Evaluate revenue per guest to identify key insights.
+5. Utilize calculated fields for data preparation and advanced analysis.
 
 
 ---
@@ -23,6 +32,9 @@ Alright! Let's begin by designing **Lab 4: ** using the provided Superstore data
 Double tap in sheet 1 and rename it as **Rent per Building & Room**
 
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_4/1.png?raw=true)
+
+
 ---
 
 ### ✅ **Report 2: Total Rent per Floor**
@@ -43,6 +55,8 @@ END
 ```
 Then Drag the `Floor` to **Columns**
 3. Drag `Rent` to **Rows**.
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_4/2.png?raw=true)
 
 ---
 
@@ -83,17 +97,25 @@ Then Drag the `Floor` to **Columns**
 6. Drop `Measure Names` to **Columns**
 7. Drop `Measure Names` to **Filters** and choose `Discount`, `Discount %` & `Rent`
 8. Drop `Measure values` to **Labels**
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_4/3.png?raw=true)
+
 ----
 
 ### ✅ **Report 4: Discount % per Room Report**
 
 Just duplicate Report 3 and remove start and end dates from Rows.
 
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_4/4.png?raw=true)
+
 -----
 
 ### ✅ **Report 5: Overal Discount % Report**
 
 Just duplicate Report 4 and remove all the fields from Rows.To understand the overall discount percentage.
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_4/5.png?raw=true)
 
 --------
 ### ✅ **Report 6: Overal Discount % (Aggregate v. Row Level) Report**
@@ -108,12 +130,11 @@ Just duplicate Report 5.
 `[Discount] / [Rent]`
 3. Now select Discount % (row level) in the Filter that is already existing(i.e Measure Names)
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_4/6.png?raw=true)
 
 -----
 
 ### ✅ **Report 7: Rental Calendar Report**
-
-
 
 1. Drag and drop the following to **Rows**:
 - Building
@@ -129,7 +150,10 @@ Just duplicate Report 5.
  
  4. Drop `Full Name` on **Label**
  5. Click on **Label** and change the alignment to **Middle Center**. And **Show mark Label** is ticked
- 
+
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_4/7.png?raw=true)
+
  -----
  ### ✅ **Report 8: Free Night Analysis Report**
 
@@ -158,6 +182,9 @@ Pull this field into **Color**.
 
 3. Right click on the bottom axis and create a reference line. Follow the below configuration.
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_4/8.png?raw=true)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_4/8.2.png?raw=true)
 
 ---------
 ### ✅ **Report 9: Revenue per Guest Report**
@@ -175,4 +202,9 @@ Drop this is Columns
 
 Now Double click on Revenue and enter the below formula.
 `SUM([Revenue]) < 1500`
+
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_4/9.png?raw=true)
+
+
 ------------
